--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@discordjs/opus": "^0.9.0",
     "chalk": "^4.1.2",
-    "discord-player": "^6.0.0",
+    "discord-player": "^6.1.0",
+    "@discord-player/extractor": "^4.1.1",
     "discord.js": "^14.7.1",
     "ffmpeg-static": "^5.1.0",
     "fs": "^0.0.1-security",
