--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "discordjsmusic",
+  "name": "discordjs-v14-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node .",
-    "slash": "node slash.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
+  "devDependencies": {
+    "node": "^16.14.0"
+  },
   "dependencies": {
+    "@discord-player/extractor": "^4.1.2",
     "@discordjs/opus": "^0.9.0",
-    "chalk": "^4.1.2",
-    "discord-player": "^6.1.0",
-    "@discord-player/extractor": "^4.1.1",
-    "discord.js": "^14.7.1",
+    "@discordjs/rest": "^1.6.0",
+    "ascii-table": "^0.0.9",
+    "chalk": "^2.4.1",
+    "discord-api-types": "^0.30.0",
+    "discord-player": "^6.1.1",
+    "discord.js": "^14.8.0",
+    "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.1.0",
-    "fs": "^0.0.1-security",
-    "moment": "^2.29.4",
-    "quick.db": "^9.0.8"
+    "ms": "^2.1.3",
+    "opusscript": "^0.0.8"
   }
 }
