--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "discordjs-v14-bot",
-  "version": "1.0.0",
+  "name": "bhop-music-bot",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
-  "devDependencies": {
-    "node": "^16.14.0"
-  },
   "dependencies": {
-    "@discord-player/extractor": "^4.1.2",
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/rest": "^1.6.0",
-    "ascii-table": "^0.0.9",
-    "chalk": "^2.4.1",
-    "discord-api-types": "^0.30.0",
-    "discord-player": "^6.1.1",
-    "discord.js": "^14.8.0",
-    "dotenv": "^16.0.3",
-    "ms": "^2.1.3",
-    "opusscript": "^0.0.8"
-  }
+    "@discord-player/extractor": "^4.4.4",
+    "better-sqlite3": "^8.2.0",
+    "chalk": "^4.1.2",
+    "discord-player": "^6.6.4",
+    "discord.js": "^14.13.0",
+    "ffmpeg-static": "^5.2.0",
+    "mediaplex": "^0.0.8",
+    "node-recursive-directory": "^1.2.0",
+    "quick.db": "^9.1.3",
+    "youtube-ext": "^1.1.14"
+  },
+  "author": "Nora",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/akanora/bhop-music-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/akanora/bhop-music-bot/issues"
+  },
+  "homepage": "https://github.com/akanora/bhop-music-bot#readme"
 }
