--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
   "name": "bhop-music-bot",
   "version": "1.0.1",
-  "description": "",
+  "description": "BHop Music Bot is a Discord bot that can play music in your voice channels. It is built using the Discord.js and Discord-Player libraries.",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@discord-player/extractor": "^4.4.4",
-    "better-sqlite3": "^8.2.0",
+    "@discord-player/extractor": "^4.4.5",
+    "@discord-player/opus": "^0.1.2",
+    "@discordjs/rest": "^2.1.0",
+    "better-sqlite3": "^9.1.1",
     "chalk": "^4.1.2",
-    "discord-player": "^6.6.4",
-    "discord.js": "^14.13.0",
-    "ffmpeg-static": "^5.2.0",
+    "discord-player": "^6.6.6",
+    "discord-voip": "^0.1.3",
+    "discord.js": "^14.14.1",
     "mediaplex": "^0.0.8",
     "node-recursive-directory": "^1.2.0",
-    "quick.db": "^9.1.3",
-    "youtube-ext": "^1.1.14"
-  },
-  "author": "Nora",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/akanora/bhop-music-bot.git"
-  },
-  "bugs": {
-    "url": "https://github.com/akanora/bhop-music-bot/issues"
-  },
-  "homepage": "https://github.com/akanora/bhop-music-bot#readme"
+    "quick.db": "^9.1.7",
+    "youtube-ext": "^1.1.16"
+  }
 }
