--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
   "name": "bhop-music-bot",
-  "version": "1.0.1",
-  "description": "BHop Music Bot is a Discord bot that can play music in your voice channels. It is built using the Discord.js and Discord-Player libraries.",
+  "version": "2.0.0",
+  "description": "Bhop Music Bot is a Discord bot that can play music in your voice channels. It is built using the Discord.js and Discord-Player libraries.",
   "main": "bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/akanora/bhop-music-bot.git"
+  },
+  "author": "Nora",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/akanora/bhop-music-bot/issues"
+  },
+  "homepage": "https://github.com/akanora/bhop-music-bot#readme",
   "dependencies": {
-    "@discord-player/extractor": "^4.4.5",
-    "@discord-player/opus": "^0.1.2",
-    "@discordjs/rest": "^2.1.0",
-    "better-sqlite3": "^9.1.1",
-    "chalk": "^4.1.2",
-    "discord-player": "^6.6.6",
-    "discord-voip": "^0.1.3",
-    "discord.js": "^14.14.1",
-    "mediaplex": "^0.0.8",
-    "node-recursive-directory": "^1.2.0",
-    "quick.db": "^9.1.7",
-    "youtube-ext": "^1.1.16"
+    "@discord-player/extractor": "^4.5.1",
+    "better-sqlite3": "^11.2.1",
+    "chalk": "^5.3.0",
+    "discord-player": "^6.7.1",
+    "discord-player-youtubei": "^1.3.1",
+    "discord.js": "^14.16.1",
+    "ffmpeg-static": "^5.2.0",
+    "mediaplex": "^0.0.9",
+    "node-recursive-directory": "^1.2.3",
+    "quick.db": "^9.1.7"
   }
 }
