feat: reorganize music folder structure and update command references
- Moved buttons, embeds, validations, and autocomplete into a dedicated music folder inside the Structures directory.
- Updated all music-related commands and button interactions to import modules from the new music folder structure.
- Consolidated music-related functionality in a single index.js file for cleaner and more manageable imports.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 node_modules/
 json.sqlite
+package-lock.json
 guildCooldownDB.sqlite
 globalCooldownDB.sqlite
 channelCooldownDB.sqlite
 .prettierrc
+Src/Credentials/
